- Fixed bug #50148 (zend_get_property_info should check for Z_TYPE_P(member) == IS_STRING) patch by yoarvi at gmail dot com

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@290512 c90b9560-bf6c-de11-be94-00142212c4b1